<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/task_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/enter_task_description"
            android:textFontWeight="400"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/task_description"
            android:inputType="text"
            android:lines="3"
            android:maxLines="3"
            android:textFontWeight="400"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/task_time_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/time_task"
            android:textFontWeight="400"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/task_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/task_time"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:textFontWeight="400"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/task_period_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/period_task"
            android:textFontWeight="400"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/task_period_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/task_period"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:textFontWeight="400"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>