<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="25dp"
    android:orientation="horizontal"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewTaskGroup"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="0.25"
            android:contentDescription="@string/task_list_item_icon"
            app:srcCompat="@android:drawable/stat_notify_chat" />

        <TextView
            android:id="@+id/textViewTaskGroup"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="0.50"
            android:gravity="center"
            android:text="@string/test"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <ImageButton
            android:id="@+id/task_group_delete_button"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="0.20"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/task_group_delete"
            app:srcCompat="@drawable/baseline_clear_black_24" />
    </LinearLayout>
</androidx.cardview.widget.CardView>