<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/task_group_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_task_group_name" />

            <EditText
                android:id="@+id/task_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/task_group_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/upload_task_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>