<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="25dp"
    android:orientation="horizontal"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTaskDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:lines="3"
                android:maxLines="3"
                android:text="@string/test"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textFontWeight="400"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/task_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/task_group_delete"
                app:srcCompat="@drawable/baseline_clear_black_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timed_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textViewTaskTimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@string/time"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textFontWeight="400"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTaskTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@string/test"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textFontWeight="400"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTaskPeriodLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@string/period"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textFontWeight="400"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTaskPeriod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@string/test"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textFontWeight="400"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>